--- a/Cheques/Web.config
+++ b/Cheques/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Cheques-20210716095054.mdf;Initial Catalog=aspnet-Cheques-20210716095054;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="checksDBEntities" connectionString="metadata=res://*/Check.csdl|res://*/Check.ssdl|res://*/Check.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-D6GV7KM\SQLEXPRESS;initial catalog=checksDB;persist security info=True;user id=sa;password=19972010;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Data Source=KCUEVAS\SQLEXPRESS;Initial Catalog=checksDB;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework;Integrated Security=True" providerName="System.Data.SqlClient" />
+   <add name="checksDBEntities" connectionString="metadata=res://*/Check.csdl|res://*/Check.ssdl|res://*/Check.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KCUEVAS\SQLEXPRESS;initial catalog=checksDB;persist security info=True;Trusted_Connection=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
