--- a/Cheques/Web.config
+++ b/Cheques/Web.config
@@ -8,10 +8,18 @@
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
-  <connectionStrings>
+  <!--CONNECTIONSTRING DE ROSA CORDERO-->
+	<!-- 
+	<connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=DESKTOP-D8GPC11\SQLEXPRESS;Initial Catalog=checksDB;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework;Integrated Security=True" providerName="System.Data.SqlClient" />
    <add name="checksDBEntities" connectionString="metadata=res://*/Check.csdl|res://*/Check.ssdl|res://*/Check.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-D8GPC11\SQLEXPRESS;initial catalog=checksDB;persist security info=True;Trusted_Connection=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  -->
+	<!--CONNECTIONSTRING DE KENNY CUEVAS-->
+	<connectionStrings>
+		<add name="DefaultConnection" connectionString="Data Source=KCUEVAS\SQLEXPRESS;Initial Catalog=checksDB;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="checksDBEntities" connectionString="metadata=res://*/Check.csdl|res://*/Check.ssdl|res://*/Check.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KCUEVAS\SQLEXPRESS;initial catalog=checksDB;persist security info=True;Trusted_Connection=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
